selfhost/test/typechecker/invocation/error_instantiation_generics.2.out
Error at %FILE_NAME%:4:22
Type mismatch
  |  var _: Foo<String> = intFoo
                          ^
Expected: Foo<String>
but instead found: Foo<Int>
