selfhost/test/typechecker/invocation/error_instantiation_generics.2.abra
type Foo<T> { t: T }

val intFoo = Foo(t: 123)
var _: Foo<String> = intFoo
